==> RiederAndrasGabor/MPU9250_arduino_lib/MPU9250.cpp <==
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/spi_common.h"
#include "driver/spi_master.h"
#include "driver/gpio.h"
#include "MPU9250.h"
#include <ctime>
#include "esp_err.h"

unsigned int MPU9250::WriteReg( uint8_t WriteAddr, uint8_t WriteData )
{
    uint8_t a=0b01111111;
    WriteAddr=(WriteAddr&a);
    uint8_t tx_data[2] = { WriteAddr, WriteData};
    uint8_t rx_data[2] = { 0xFF, 0xFF};
    spi_transaction_t t = {
        .length = 2*8,
        .tx_buffer = tx_data,
        .rx_buffer = rx_data
    };  
    // kiírásra került az adat
    ESP_ERROR_CHECK(spi_device_polling_transmit(spi_dev_mpu9250, &t));
    return(rx_data[1]);
}

unsigned int  MPU9250::ReadReg( uint8_t WriteAddr, uint8_t WriteData )
{
    uint8_t a=0b10000000;
    WriteAddr=(WriteAddr|a);
    uint8_t tx_data[2] = { WriteAddr, WriteData};
    uint8_t rx_data[2] = { 0xFF, 0xFF};
    spi_transaction_t t = {
        .length = 2*8,
        .tx_buffer = tx_data,
        .rx_buffer = rx_data
    };  
    // kiírásra került az adat
    ESP_ERROR_CHECK(spi_device_polling_transmit(spi_dev_mpu9250, &t));
    printf("Received data: %d, %d\n",rx_data[0],rx_data[1]);
    return(rx_data[1]);
    // uint8_t a=0b10000000;
    // WriteAddr=(WriteAddr|a);
    // // uint8_t a=0b01111111;
    // // WriteAddr=(WriteAddr&a);
    // uint8_t tx_data[2] = { WriteAddr, WriteData};
    // uint8_t rx_data[2] = { 0xFF, 0xFF};
    // spi_transaction_t t = {
    //     .length = 2*8,
    //     .tx_buffer = tx_data,
    //     .rx_buffer = rx_data
    // };  
    // printf("Asked data: %d \n",rx_data[1]);
    // ESP_ERROR_CHECK(spi_device_polling_transmit(spi_dev_mpu9250, &t));
    // return(rx_data[1]);
}

void MPU9250::ReadRegs( uint8_t ReadAddr, uint8_t *ReadBuf, unsigned int Bytes )
{
    unsigned int  i = 0;
    for(i = 0; i < Bytes; i++)
    {
        uint8_t a=0b10000000;
        uint8_t b=0x00;
        a =((ReadAddr+i)|a);
        uint8_t tx_data[2] = { a, b };
        uint8_t rx_data[2] = { 0xFF, 0xFF};
    
    spi_transaction_t t = {
        .length = 2*8,
        .tx_buffer = tx_data,
        .rx_buffer = rx_data
     };  
     
     ESP_ERROR_CHECK(spi_device_polling_transmit(spi_dev_mpu9250, &t));
     ReadBuf[i] = rx_data[1];
    //  printf("Az i. regiszter értékei: %d\n", rx_data[1]);
    }
}

bool MPU9250::init(bool calib_gyro, bool calib_acc){
/*    //pinMode(my_cs, OUTPUT);
#ifdef CORE_TEENSY
    digitalWriteFast(my_cs, HIGH);
#else
    //digitalWrite(my_cs, HIGH);
    my_cs=1;
#endif*/
    float temp[3];

    if(calib_gyro && calib_acc){
        calibrate(g_bias, a_bias);
    }
    else if(calib_gyro){
        calibrate(g_bias, temp);
    }
    else if(calib_acc){
        calibrate(temp, a_bias);
    }
    
    uint8_t i = 0;
    uint8_t MPU_Init_Data[MPU_InitRegNum][2] = { //[17][2]
        {BIT_H_RESET, MPUREG_PWR_MGMT_1},        // Reset Device
        {0x01, MPUREG_PWR_MGMT_1},               // Clock Source
        {0x00, MPUREG_PWR_MGMT_2},               // Enable Acc & Gyro
        {my_low_pass_filter, MPUREG_CONFIG},     // Use DLPF set Gyroscope bandwidth 184Hz, temperature bandwidth 188Hz
        {BITS_FS_250DPS, MPUREG_GYRO_CONFIG},    // +-250dps
        {BITS_FS_2G, MPUREG_ACCEL_CONFIG},       // +-2G
        {my_low_pass_filter_acc, MPUREG_ACCEL_CONFIG_2}, // Set Acc Data Rates, Enable Acc LPF , Bandwidth 184Hz
        {0x12, MPUREG_INT_PIN_CFG},      //
        //{0x40, MPUREG_I2C_MST_CTRL},   // I2C Speed 348 kHz
        //{0x20, MPUREG_USER_CTRL},      // Enable AUX
        {0x30, MPUREG_USER_CTRL},        // I2C Master mode and set I2C_IF_DIS to disable slave mode I2C bus
        {0x0D, MPUREG_I2C_MST_CTRL},     // I2C configuration multi-master  IIC 400KHz
        
        {AK8963_I2C_ADDR, MPUREG_I2C_SLV0_ADDR},  // Set the I2C slave addres of AK8963 and set for write.
        //{0x09, MPUREG_I2C_SLV4_CTRL},
        //{0x81, MPUREG_I2C_MST_DELAY_CTRL}, // Enable I2C delay

        {AK8963_CNTL2, MPUREG_I2C_SLV0_REG}, // I2C slave 0 register address from where to begin data transfer
        {0x01, MPUREG_I2C_SLV0_DO},   // Reset AK8963
        {0x81, MPUREG_I2C_SLV0_CTRL}, // Enable I2C and set 1 byte

        {AK8963_CNTL1, MPUREG_I2C_SLV0_REG}, // I2C slave 0 register address from where to begin data transfer
#ifdef AK8963FASTMODE
        {0x16, MPUREG_I2C_SLV0_DO},   // Register value to 100Hz continuous measurement in 16bit
#else
        {0x12, MPUREG_I2C_SLV0_DO},   // Register value to 8Hz continuous measurement in 16bit
#endif
        {0x81, MPUREG_I2C_SLV0_CTRL}  //Enable I2C and set 1 byte
        
    };
    for(i = 0; i < MPU_InitRegNum; i++) {
        WriteReg(MPU_Init_Data[i][1], MPU_Init_Data[i][0]);
        //delayMicroseconds(1000);  // I2C must slow down the write speed, otherwise it won't work
        delay(1);
    }
    Accelometer_Scale scale1=BITSFS_2G;
    set_acc_scale(scale1);
    Gyro_Scale scale2=BITSFS_250;
    set_gyro_scale(scale2);
    calib_mag();  // If experiencing problems here, just comment it out. Should still be somewhat functional.
    return 0;
}

void MPU9250::read_acc()
{
    uint8_t response[6];
    int16_t bit_data;
    float data;
    int i;
    ReadRegs(MPUREG_ACCEL_XOUT_H,response,6);
    for(i = 0; i < 3; i++) {
        bit_data = ((int16_t)response[i*2]<<8)|response[i*2+1];
        data = (float)bit_data;
        accel_data[i] = data/acc_divider - a_bias[i];
       // gyro_data[i] = (data*a_scale_g)/(acc_divider*a_scale)- a_bias[i];
    }   
}

void MPU9250::calib_acc(float XA, float YA, float ZA)
{
    a_bias[0] = XA;  
    a_bias[1] = YA;
    a_bias[2] = ZA;
}

void MPU9250::read_all(){
    uint8_t response[21];
    int16_t bit_data;
    float data;
    int i;

    // Send I2C command at first
    WriteReg(MPUREG_I2C_SLV0_ADDR,AK8963_I2C_ADDR|READ_FLAG); // Set the I2C slave addres of AK8963 and set for read.
    WriteReg(MPUREG_I2C_SLV0_REG, AK8963_HXL);                // I2C slave 0 register address from where to begin data transfer
    WriteReg(MPUREG_I2C_SLV0_CTRL, 0x87);                     // Read 7 bytes from the magnetometer
    // must start your read from AK8963A register 0x03 and read seven bytes so that upon read of ST2 register 0x09 the AK8963A will unlatch the data registers for the next measurement.

    ReadRegs(MPUREG_ACCEL_XOUT_H,response,21);
    // Get accelerometer value
    for(i = 0; i < 3; i++) {
        bit_data = ((int16_t)response[i*2]<<8) | response[i*2+1];
        data = (float)bit_data;
        accel_data[i] = data/acc_divider - a_bias[i];
    }
    // Get gyroscope value
    for(i=4; i < 7; i++) {
        bit_data = ((int16_t)response[i*2]<<8) | response[i*2+1];
        data = (float)bit_data;
        gyro_data[i-4] = data/gyro_divider - g_bias[i-4];
    }
    // Get Magnetometer value
    for(i=7; i < 10; i++) {
        mag_data_raw[i-7] = ((int16_t)response[i*2+1]<<8) | response[i*2];
        data = (float)mag_data_raw[i-7];
        mag_data[i-7] = data * Magnetometer_ASA[i-7];
    }
}
