==> yuqlid/stm32f4discovery/Src/mpu9250.cpp <==
#include "mpu9250.h"

unsigned int mpu9250::WriteReg( uint8_t WriteAddr, uint8_t WriteData )
{
	if(commtype == MPU9250_COMMS_SPI){
#ifdef HAL_SPI_MODULE_ENABLED
		uint8_t txdata_buf[2] = {WriteAddr, WriteData};
		uint8_t rxdata_buf[2];
		select();
		HAL_SPI_TransmitReceive(mpuSpiHandle, (uint8_t*)txdata_buf, (uint8_t*)rxdata_buf, 2 , 1);
		deselect();
#endif /* HAL_SPI_MODULE_ENABLED */
	}else if(commtype == MPU9250_COMMS_I2C){
#ifdef HAL_I2C_MODULE_ENABLED
		HAL_I2C_Mem_Write(mpuI2cHandle, mpuaddress << 1, WriteAddr, I2C_MEMADD_SIZE_8BIT, &WriteData, 1, 10);
#endif /* HAL_I2C_MODULE_ENABLED */
	}
}

unsigned int  mpu9250::ReadReg( uint8_t WriteAddr, uint8_t WriteData )
{
	uint8_t rxdata_buf[2];

	if(commtype == MPU9250_COMMS_SPI){
#ifdef HAL_SPI_MODULE_ENABLED
		uint8_t txdata_buf[2] = {WriteAddr | READ_FLAG, WriteData};
		select();
		HAL_SPI_TransmitReceive(mpuSpiHandle, (uint8_t*)txdata_buf, (uint8_t*)rxdata_buf, 2 , 1);
		deselect();
#endif /* HAL_SPI_MODULE_ENABLED */
	}else if(commtype == MPU9250_COMMS_I2C){
#ifdef HAL_I2C_MODULE_ENABLED
		HAL_I2C_Mem_Read(mpuI2cHandle, mpuaddress << 1, WriteAddr| READ_FLAG, I2C_MEMADD_SIZE_8BIT, &rxdata_buf[1], 1, 10);
#endif /* HAL_I2C_MODULE_ENABLED */
	}
    return rxdata_buf[1];
}

void mpu9250::ReadRegs( uint8_t ReadAddr, uint8_t* ReadBuf, unsigned int Bytes )
{
	uint8_t txdata_buf= ReadAddr | READ_FLAG;

	if(commtype == MPU9250_COMMS_SPI){
#ifdef HAL_SPI_MODULE_ENABLED
		select();
		HAL_SPI_Transmit(mpuSpiHandle,&txdata_buf, 1, 1);
		HAL_SPI_Receive(mpuSpiHandle,(uint8_t*)ReadBuf, Bytes, 1);
		deselect();
#endif /* HAL_SPI_MODULE_ENABLED */
	}else if(commtype == MPU9250_COMMS_I2C){
#ifdef HAL_I2C_MODULE_ENABLED
		HAL_I2C_Mem_Read(mpuI2cHandle, mpuaddress << 1 , txdata_buf, I2C_MEMADD_SIZE_8BIT, (uint8_t*)ReadBuf, Bytes, 10);
#endif /* HAL_I2C_MODULE_ENABLED */
	}
}

bool mpu9250::init(int sample_rate_div,int low_pass_filter){
    uint8_t i = 0;
    uint8_t MPU_Init_Data[MPU_InitRegNum][2] = {
        {0x80, MPUREG_PWR_MGMT_1},     // Reset Device
        {0x01, MPUREG_PWR_MGMT_1},     // Clock Source
        {0x00, MPUREG_PWR_MGMT_2},     // Enable Acc & Gyro
        {low_pass_filter, MPUREG_CONFIG},         // Use DLPF set Gyroscope bandwidth 184Hz, temperature bandwidth 188Hz
        {0x18, MPUREG_GYRO_CONFIG},    // +-2000dps
        {0x00, MPUREG_ACCEL_CONFIG},   // +-2G
        {0x09, MPUREG_ACCEL_CONFIG_2}, // Set Acc Data Rates, Enable Acc LPF , Bandwidth 184Hz
        {0x30, MPUREG_INT_PIN_CFG},    //
        //{0x40, MPUREG_I2C_MST_CTRL},   // I2C Speed 348 kHz
        //{0x20, MPUREG_USER_CTRL},      // Enable AUX
        {0x20, MPUREG_USER_CTRL},       // I2C Master mode
        {0x0D, MPUREG_I2C_MST_CTRL}, //  I2C configuration multi-master  IIC 400KHz
        
        {AK8963_I2C_ADDR, MPUREG_I2C_SLV0_ADDR},  //Set the I2C slave addres of AK8963 and set for write.
        //{0x09, MPUREG_I2C_SLV4_CTRL},
        //{0x81, MPUREG_I2C_MST_DELAY_CTRL}, //Enable I2C delay

        {AK8963_CNTL2, MPUREG_I2C_SLV0_REG}, //I2C slave 0 register address from where to begin data transfer
        {0x01, MPUREG_I2C_SLV0_DO}, // Reset AK8963
        {0x81, MPUREG_I2C_SLV0_CTRL},  //Enable I2C and set 1 byte

        {AK8963_CNTL1, MPUREG_I2C_SLV0_REG}, //I2C slave 0 register address from where to begin data transfer
        {0x12, MPUREG_I2C_SLV0_DO}, // Register value to continuous measurement in 16bit
        {0x81, MPUREG_I2C_SLV0_CTRL}  //Enable I2C and set 1 byte
        
    };

    for(i=0; i<MPU_InitRegNum; i++) {
		WriteReg(MPU_Init_Data[i][1], MPU_Init_Data[i][0]);
		HAL_Delay(10);  //I2C must slow down the write speed, otherwise it won't work
    }

    set_acc_scale(2);
    set_gyro_scale(250);
    
    //AK8963_calib_Magnetometer();  //Can't load this function here , strange problem?
    return 0;
}

void mpu9250::read_acc()
{
    uint8_t response[6];
    int16_t bit_data;
    float data;
    int i;
    ReadRegs(MPUREG_ACCEL_XOUT_H,response,6);
    for(i=0; i<3; i++) {
        bit_data=((int16_t)response[i*2]<<8)|response[i*2+1];
        accelerometer_data_raw[i] = bit_data;
        data=(float)bit_data;
        accelerometer_data[i]=data/acc_divider;
    }
    
}

void mpu9250::calib_acc()
{
    uint8_t response[4];
    int temp_scale;
    //READ CURRENT ACC SCALE
    temp_scale=ReadReg(MPUREG_ACCEL_CONFIG, 0x00);
    set_acc_scale(BITS_FS_8G);
    //ENABLE SELF TEST need modify
    //temp_scale=WriteReg(MPUREG_ACCEL_CONFIG, 0x80>>axis);

    ReadRegs(MPUREG_SELF_TEST_X,response,4);
    calib_data[x]=((response[0]&11100000)>>3)|((response[3]&00110000)>>4);
    calib_data[y]=((response[1]&11100000)>>3)|((response[3]&00001100)>>2);
    calib_data[z]=((response[2]&11100000)>>3)|((response[3]&00000011));

    set_acc_scale(temp_scale);
}

void mpu9250::read_all(){
    uint8_t response[21];
    int16_t bit_data;
    float data;
    int i;

    //Send I2C command at first
    WriteReg(MPUREG_I2C_SLV0_ADDR,AK8963_I2C_ADDR|READ_FLAG); //Set the I2C slave addres of AK8963 and set for read.
    WriteReg(MPUREG_I2C_SLV0_REG, AK8963_HXL); //I2C slave 0 register address from where to begin data transfer
    WriteReg(MPUREG_I2C_SLV0_CTRL, 0x87); //Read 7 bytes from the magnetometer
    //must start your read from AK8963A register 0x03 and read seven bytes so that upon read of ST2 register 0x09 the AK8963A will unlatch the data registers for the next measurement.

    ReadRegs(MPUREG_ACCEL_XOUT_H,response,21);
    //Get accelerometer value
    for(i=0; i<3; i++) {
        bit_data=((int16_t)response[i*2]<<8)|response[i*2+1];
        accelerometer_data_raw[i] = bit_data;
        data=(float)bit_data;
        accelerometer_data[i]=data/acc_divider;
    }
    //Get temperature
    bit_data=((int16_t)response[i*2]<<8)|response[i*2+1];
    data=(float)bit_data;
    Temperature_raw = bit_data;
    Temperature=((data-21)/333.87)+21;
    //Get gyroscop value
    for(i=4; i<7; i++) {
        bit_data=((int16_t)response[i*2]<<8)|response[i*2+1];
        gyroscope_data_raw[i-4] = bit_data;
        data=(float)bit_data;
        gyroscope_data[i-4]=data/gyro_divider;
    }
    //Get Magnetometer value
    for(i=7; i<10; i++) {
        bit_data=((int16_t)response[i*2+1]<<8)|response[i*2];
        Magnetometer_raw[i-7] = bit_data;
        data=(float)bit_data;
        Magnetometer[i-7]=data*Magnetometer_ASA[i-7];
    }
}
